# libwave

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: async.h  async_private.h  file.h  file_private.h  idle.h  idle_private.h  merge.h  pipe.h  pipe_private.h  process.h  process_flags.h  process_private.h  stream.h  stream_private.h  tcp.h  tcp_private.h  timer.h  timer_private.h  wave.h  wave_private.h  worker.h  worker_private.h  zip.h
src/: CMakeLists.txt  wave.cpp
tests/: CMakeLists.txt  tests.cpp
